# rledger

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  manifest
.beads/: metadata.json
crates/rledger-cli/: Cargo.toml
crates/rledger-cli/src/: main.rs
crates/rledger-common/: Cargo.toml
crates/rledger-common/src/: lib.rs
crates/rledger-core/: Cargo.toml
crates/rledger-core/src/: lib.rs
crates/rledger-storage/: Cargo.toml
crates/rledger-storage/src/: lib.rs
docs/: ARCHITECTURE.md  PARSER_SPEC.md  TECHNICAL_SPEC.md
