[workspace]
resolver = "2"
members = [
    "crates/rledger-common",
    "crates/rledger-core",
    "crates/rledger-storage",
    "crates/rledger-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["rledger Contributors"]
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
rledger-common = { path = "crates/rledger-common" }
rledger-core = { path = "crates/rledger-core" }
rledger-storage = { path = "crates/rledger-storage" }

# Core types
rust_decimal = "1.35"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing
logos = "0.15"
nom = "7.1"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
colored = "2.1"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Testing
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
